data/derived/comb/progs/unify/prog8210.ml.out
Characters 57-58:
  let remainder x y = if x * y > 10 then (x*y) mod 10 else x y;;
                                                           ^
Error: This expression has type int
       This is not a function; it cannot be applied.
